ECS/ecs-cluster.yaml
AWSTemplateFormatVersion: 2010-09-09
Description: Deploys an ECS Service with an associated load balancer
Parameters:
  KeyPair:
    Description: >-
      Name of an existing EC2 KeyPair to enable SSH access to the container
      instances
    Type: "AWS::EC2::KeyPair::KeyName"
    ConstraintDescription: Must be a valid EC2 keypair.
  LoadBalancerSubnets:
    Description: Subnet(s) for the load balancer
    Type: "List<AWS::EC2::Subnet::Id>"
  ECSSubnets:
    Description: Subnets for the ECS container instances
    Type: "List<AWS::EC2::Subnet::Id>"
  VpcId:
    Description: VPC ID for resources
    Type: "AWS::EC2::VPC::Id"
  InstanceType:
    Description: Container instances EC2 instance type
    Type: String
    Default: t2.small
    AllowedValues:
      - t2.nano
      - t2.micro
      - t2.small
      - t2.medium
      - t2.large
      - t2.xlarge
      - t2.2xlarge

    ConstraintDescription: must be a valid EC2 instance type.
  DesiredCapacity:
    Type: Number
    Default: 1
    Description: Number of instances to launch in your ECS cluster.
  MaxSize:
    Type: Number
    Description: Maximum number of instances that can be launched in your ECS cluster.
  Owner:
    Description: Used to tag resources
    Type: String
  SourceCidr:
    Description: Restrict SSH access to the container instances to this CIDR
    Type: String
    Default: 0.0.0.0/0
Mappings:
  AWSRegionToAMI:
    us-east-1:
      AMIID: ami-275ffe31
    us-east-2:
      AMIID: ami-62745007
    us-west-1:
      AMIID: ami-689bc208
    us-west-2:
      AMIID: ami-62d35c02
    eu-west-1:
      AMIID: ami-95f8d2f3
    eu-west-2:
      AMIID: ami-bf9481db
    eu-central-1:
      AMIID: ami-085e8a67
    ap-northeast-1:
      AMIID: ami-f63f6f91
    ap-southeast-1:
      AMIID: ami-b4ae1dd7
    ap-southeast-2:
      AMIID: ami-fbe9eb98
    ca-central-1:
      AMIID: ami-ee58e58a
Resources:
  ECSCluster:
    Type: "AWS::ECS::Cluster"
  ECSAutoScalingGroup:
    Type: "AWS::AutoScaling::AutoScalingGroup"
    Properties:
      VPCZoneIdentifier: !Ref ECSSubnets
      LaunchConfigurationName: !Ref ContainerInstances
      MinSize: 1
      MaxSize: !Ref MaxSize
      DesiredCapacity: !Ref DesiredCapacity
      Tags:
        - Key: Name
          Value: Container Instance
          PropagateAtLaunch: "true"
        - Key: Owner
          Value: !Ref Owner
          PropagateAtLaunch: "true"
    CreationPolicy:
      ResourceSignal:
        Timeout: PT15M
    UpdatePolicy:
      AutoScalingRollingUpdate:
        MinInstancesInService: !Ref DesiredCapacity
        MaxBatchSize: 1
        PauseTime: PT15M
        WaitOnResourceSignals: true
  ContainerInstancesSecurityGroup:
    Type: "AWS::EC2::SecurityGroup"
    Properties:
      VpcId: !Ref VpcId
      GroupDescription: Enable HTTP from the ApplicationLoadBalancer on dynamic ports
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 32768
          ToPort: 60999
          SourceSecurityGroupId: !Ref LoadBalancerSecurityGroup
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: !Ref SourceCidr
      Tags:
        - Key: Name
          Value: ecs-access-container-instance-from-loadbalancer
        - Key: Owner
          Value: !Ref Owner
  ContainerInstances:
    Type: "AWS::AutoScaling::LaunchConfiguration"
    Metadata:
      "AWS::CloudFormation::Init":
        config:
          commands:
            01_add_instance_to_cluster:
              command: !Join
                - ""
                - - |
                    #!/bin/bash
                  - echo ECS_CLUSTER=
                  - !Ref ECSCluster
                  - " >> /etc/ecs/ecs.config"
          files:
            /etc/cfn/cfn-hup.conf:
              content: !Join
                - ""
                - - |
                    [main]
                  - stack=
                  - !Ref "AWS::StackId"
                  - |+

                  - region=
                  - !Ref "AWS::Region"
                  - |+

              mode: "000400"
              owner: root
              group: root
            /etc/cfn/hooks.d/cfn-auto-reloader.conf:
              content: !Join
                - ""
                - - |
                    [cfn-auto-reloader-hook]
                  - |
                    triggers=post.update
                  - >
                    path=Resources.ContainerInstances.Metadata.AWS::CloudFormation::Init
                  - "action=/opt/aws/bin/cfn-init -v "
                  - "         --stack "
                  - !Ref "AWS::StackName"
                  - "         --resource ContainerInstances "
                  - "         --region "
                  - !Ref "AWS::Region"
                  - |+

                  - |
                    runas=root
          services:
            sysvinit:
              cfn-hup:
                enabled: true
                ensureRunning: true
                files:
                  - /etc/cfn/cfn-hup.conf
                  - /etc/cfn/hooks.d/cfn-auto-reloader.conf
    Properties:
      ImageId: !FindInMap
        - AWSRegionToAMI
        - !Ref "AWS::Region"
        - AMIID
      InstanceType: !Ref InstanceType
      IamInstanceProfile: !Ref ContainerInstanceProfile
      KeyName: !Ref KeyPair
      SecurityGroups:
        - !Ref ContainerInstancesSecurityGroup
      UserData: !Base64
        "Fn::Join":
          - ""
          - - |
              #!/bin/bash -xe
            - |
              yum -y update
            - |
              yum install -y aws-cfn-bootstrap
            - "/opt/aws/bin/cfn-init -v "
            - "         --stack "
            - !Ref "AWS::StackName"
            - "         --resource ContainerInstances "
            - "         --region "
            - !Ref "AWS::Region"
            - |+

            - "/opt/aws/bin/cfn-signal -e $? "
            - "         --stack "
            - !Ref "AWS::StackName"
            - "         --resource ECSAutoScalingGroup "
            - "         --region "
            - !Ref "AWS::Region"
            - |+

  ContainerInstanceProfile:
    Type: "AWS::IAM::InstanceProfile"
    Properties:
      Path: /
      Roles:
        - !Ref ContainerServiceRole
  ContainerServiceRole:
    Type: "AWS::IAM::Role"
    Properties:
      AssumeRolePolicyDocument:
        Statement:
          - Effect: Allow
            Principal:
              Service:
                - ec2.amazonaws.com
            Action:
              - "sts:AssumeRole"
      Path: /
      ManagedPolicyArns:
        - >-
          arn:aws:iam::aws:policy/service-role/AmazonEC2ContainerServiceforEC2Role
  LoadBalancerSecurityGroup:
    Type: "AWS::EC2::SecurityGroup"
    Properties:
      GroupDescription: Security group for the ApplicationLoadBalancer
      VpcId: !Ref VpcId
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: ecs-inbound-access-to-loadbalancer
        - Key: Owner
          Value: !Ref Owner
  ApplicationLoadBalancer:
    Type: "AWS::ElasticLoadBalancingV2::LoadBalancer"
    Properties:
      SecurityGroups:
        - !Ref LoadBalancerSecurityGroup
      Subnets: !Ref LoadBalancerSubnets
      Tags:
        - Key: Owner
          Value: !Ref Owner
  ApplicationLoadBalancerListener:
    Type: "AWS::ElasticLoadBalancingV2::Listener"
    Properties:
      DefaultActions:
        - Type: forward
          TargetGroupArn: !Ref NullTargetGroup
      LoadBalancerArn: !Ref ApplicationLoadBalancer
      Port: 80
      Protocol: HTTP
  NullTargetGroup:
    Type: "AWS::ElasticLoadBalancingV2::TargetGroup"
    DependsOn:
      - ApplicationLoadBalancer
    Properties:
      Port: 80
      Protocol: HTTP
      VpcId: !Ref VpcId
      Tags:
        - Key: Name
          Value: alb-null-target-group
Outputs:
  Cluster:
    Description: The created ECS cluster
    Value: !Ref ECSCluster
  Listener:
    Description: ApplicationLoadBalancer Listener
    Value: !Ref ApplicationLoadBalancerListener
  ApplicationLoadBalancerEndpoint:
    Description: DNS name of the ApplicationLoadBalancer
    Value: !GetAtt
      - ApplicationLoadBalancer
      - DNSName
  SecurityGroup:
    Description: Security Group GroupID of the ECS instances
    Value: !GetAtt
      - ContainerInstancesSecurityGroup
      - GroupId
